--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,3 @@
 <h1>StaticPages#contact</h1>
 <p>Find me in app/views/static_pages/contact.html.erb</p>
+<img src="https://ponbic-p.azureedge.net/en/cdn/media/images/bikes/p-series/p5x/studio/award-p5x-20181.jpg?w=1280&q=70&hash=3CBAED7F9269CD49070F0BCAF7748D338A942249">
